# AerialRobotics_PracticeProblems

opencv_cpp/: CMakeLists.txt  README.txt  checkerboard.cpp
px4_mavros_sitl/offb/: CMakeLists.txt  package.xml
px4_mavros_sitl/offb/src/: offb_node.cpp
px4_mavros_sitl/problem2/: CMakeLists.txt  package.xml
robot_operating_system/image_enhancer/: CMakeLists.txt  package.xml
robot_operating_system/image_enhancer/src/: image_changer.cpp
robot_operating_system/imagepub/: CMakeLists.txt  package.xml
robot_operating_system/imagepub/src/: cb_publisher.cpp  file_publisher.cpp
